[FIX] #133 VideoCard 제목 text-overflow 처리

--- a/src/components/common/VideoCard/VideoCard.module.css
+++ b/src/components/common/VideoCard/VideoCard.module.css
@@ -33,6 +33,9 @@
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   margin: 0;
 }
 
